<resources>
    <string name="app_name">Bookstore</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="kindly_input_your_login_details">Kindly input your login details</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register">Register</string>

    <!-- REGISTRATION STRINGS -->
    <string name="new_user_sign_up">New user? Sign up!</string>
    <string name="new_user_name">Name</string>
    <string name="new_user_contact_number">Contact number</string>
    <string name="new_user_repeat_password">Repeat password</string>
    <string name="new_user_has_account">Already have an account?</string>
    <string name="new_user_sign_in">Sign in</string>

    <!--    Book details string-->
    <string name="book_details_title">Book Details</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_price">Price</string>
    <string name="book_description">Description</string>
    <string name="book_button">Add book</string>
    <string name="book_alert_title">Choose Book cover picture</string>
</resources>